tests/snapshots/cli__hdf5__detail_compressed_f16.snap
---
source: tests/cli.rs
expression: "plain(&[\"--tensor\", \"lm_head.weight\"])"
---
Tensor Details                                                                                                       [×]
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
Name: lm_head.weight
Data Type: F16
Shape: (10, 4)
Parameters: 40 (40)
Size: 80 B · on disk: 27 B (⇩ gzip, 3.0×)
Chunks: (10, 4) × 1
File: [FIXTURE]

Statistics: press s to scan the full tensor



























m heatmap · v values · h histogram · b bins · s stats · d dtype · r reshape · Space/: commands · l legend
yy copy screen · y copy command · ⌫/\ back/fwd                                                                read-only
