tests/snapshots/cli__hdf5__detail_histogram.snap
---
source: tests/cli.rs
expression: "plain(&[\"--tensor\", &t, \"--histogram\"])"
---
Tensor Details                                                                                                       [×]
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
Name: model.layers.0.block_sparse_moe.experts.down_proj.weight
Data Type: U16 as u3×5 (unpacked)
Shape: (6, 3, 4) as (30, 3, 4)
Parameters: 360 (360)
Packing: u3×5 (bit widths [3, 3, 3, 3, 3] · 5 experts/word · uniform)
Size: 144 B · on disk: 134 B (⇩ gzip, 1.1×)
Chunks: (2, 3, 4) × 3
File: [FIXTURE]

Statistics: press s to scan the full tensor

Histogram: 360 values  (<time>)
0 │▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆ 249 (69.2%)
1 │▆▆▆▆▆▆▆▆▆▆  25 (6.9%)
2 │▆▆▆▆▆▆▆▆▆▆  25 (6.9%)
3 │▆▆▆▆▆▆▆▆▆▆  25 (6.9%)
4 │▆▆▆▆   9 (2.5%)
5 │▆▆▆▆   9 (2.5%)
6 │▆▆▆▆   9 (2.5%)
7 │▆▆▆▆   9 (2.5%)
















m heatmap · v values · h histogram · b bins · s stats · d dtype · r reshape · Space/: commands · l legend
c copy screen · y copy command · ⌫/\ back/fwd                                                                 read-only
