tests/snapshots/cli__hdf5__legend_values.snap
---
source: tests/cli.rs
expression: "plain(&[\"--tensor\", &t, \"--values\", \"--legend\"])"
---
Values: model.layers.0.block_sparse_moe.experts.down_proj.weight                                                     [×]
File: [FIXTURE]
U16 as u3×5 (unpacked) (6, 3, 4) as (30, 3, 4) → edges: all 3 of 3 rows × all 4 of 4 cols (indices shown)
mean 0.9667 · std 1.7854 · zeros 69.2%  (<time>)
expert 0 of 30 — stored word 0, field 0/5 (3-bit) — [ ] step · / index or %

        0  1  2  3
     0  0  1  2  3
     1  4  5  6  7
     2  0  1  2  3



        ╭ Legend — numeric values ─────────────────────────────────────────────────────────────────────────────╮
        │   12  34    row / column indices into the full tensor (dimmed), not data values                      │
        │   ⋯         columns were skipped here (the gap between the first and last columns)                   │
        │   ⋮         rows were skipped here                                                                   │
        │   ⋱         both rows and columns were skipped (the corner)                                          │
        │   1.2e-3    floats use scientific notation; integers print plain                                     │
        │   3f800000  press b to cycle the base: dec / hex / oct / bin (raw stored bits)                       │
        │    12  34   zebra striping traces a row or column (cycle rows/cols/off with z)                       │
        │                                                                                                      │
        │    read-only       browsing never modifies the checkpoint — repack / convert write a new file        │
        │    metadata-only   a remote source: only header metadata is loaded; data views need the file locally │
        │                                                                                                      │
        │ Click or press any key to close.                                                                     │
        ╰──────────────────────────────────────────────────────────────────────────────────────────────────────╯










m heatmap · ← → first/last cols · ↑ ↓ first/last rows · +Shift one end · [ ] slice · / index or % · d dtype · r reshape
· e window · z zebra: rows · b base: dec · yy copy screen · y copy cmd · l legend · Space commands · ⌫ back · \ fwd · an
y other key to return...                                                                                      read-only
